# flight-tracker

./: Makefile  README.md  flight-tracker.cabal  stack.yaml
app/: Main.hs
src/: Arrival.hs  Departure.hs  Lib.hs  Requests.hi  Requests.hs  Types.hs  UI.hs  USA.hs  Usa.hs
test/: Test.hs
