name:                flight-tracker
version:             0.0.0.1
synopsis:            CSE 230 final project - terminal flight tracker
license:             MIT
-- license-file:        LICENSE
author:              Alisha Ukani, Zac Blanco
maintainer:          aukani@ucsd.edu, zblanco@ucsd.edu
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Library
  ghc-options:        -W
  exposed-modules:    Lib, Requests, UI, Types, USA, Arrival, Departure
  Default-Extensions: OverloadedStrings

  -- other-extensions:
  build-depends:       aeson,
                       base,
                       brick,
                       bytestring,
                       containers,
                       HTTP,
                       microlens,
                       MissingH,
                       mtl,
                       QuickCheck,
                       req,
                       scientific,
                       template-haskell,
                       text,
                       time,
                       vector,
                       vty
  hs-source-dirs:      src
  default-language:    Haskell2010

executable flight-tracker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , optparse-applicative
                     , flight-tracker
  default-language:    Haskell2010

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base,
                    containers,
                    mtl,
                    filepath,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process,
                    flight-tracker
